feat: go webviwer to python

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Desktop
+.venv/
+build
+
 # Logs
 logs
 *.log
@@ -89,7 +93,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+/client/dist
 /api/dist
 
 # Gatsby files
