--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,20 +1,22 @@
 {
   "version": 2,
-  "buildCommand": "nest build",
-  "installCommand": "pnpm install --force",
-  "framework": null,
-  "outputDirectory": "dist",
   "builds": [
     {
-      "src": "server.js",
+      "src": "src/main.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"]
+      "dest": "src/main.ts",
+      "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "PATCH",
+        "DELETE"
+      ]
     }
   ]
 }
